# chorus

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.base.json  tsconfig.json  turbo.json
.next/: app-build-manifest.json  prerender-manifest.json  trace
app/: globals.css  layout.tsx  page.tsx
components/: Dashboard.tsx  DataPage.tsx  IsometricCubes.tsx  (+11 more)
ingestion/: .env.example  .gitignore  API.md  pyproject.toml
ingestion/app/: config.py  main.py
ingestion/app/api/: asd.py  clarification.py  contracts.py  search.py  sop.py
ingestion/app/compiler/: contract_extractor.py  edge_builder.py  node_compiler.py  pipeline.py  structural_analysis.py  validator.py
ingestion/app/compiler/prompts/: contract_extract.j2  edge_build.j2  node_compile.j2  structural.j2
ingestion/app/contract_gen/: __init__.py  checks.py  dsl.py  pipeline.py  schemas.py  state.py
ingestion/app/contract_gen/agents/: drafter.py  planner.py  refiner.py  validator.py
ingestion/app/contract_gen/prompts/: drafter.j2  planner.j2  refiner.j2  validator_consistency.j2
ingestion/app/db/: client.py  enums.py
ingestion/app/drift/: detector.py
ingestion/app/ingestion/: chunker.py  confluence.py  docx.py  embedder.py  notion.py  parser.py  pdf.py  text.py
ingestion/app/llm/: client.py
ingestion/app/schemas/: asd.py  clarification.py  sop.py
ingestion/scripts/: run_migration.py
ingestion/supabase/migrations/: 001_initial_schema.sql  002_contract_gen_schema.sql
(+222 files in other folders)
